--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "firebase": "^11.7.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
-    "sweetalert2": "^11.21.0",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
