--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.77.0",
     "axios": "^1.9.0",
     "firebase": "^11.7.3",
+    "lottie-react": "^2.4.1",
+    "motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
