--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.77.0",
     "axios": "^1.9.0",
     "firebase": "^11.7.3",
+    "localforage": "^1.10.0",
     "lottie-react": "^2.4.1",
+    "match-sorter": "^8.0.3",
     "motion": "^12.12.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -22,6 +27,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.2",
+    "sort-by": "^1.2.0",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.6"
   },
