--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.2",
     "sort-by": "^1.2.0",
