--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.2.4",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.77.0",
     "aos": "^2.3.4",
@@ -34,6 +35,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.6"
