--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "'": "github:stripe/react-stripe-js",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.4",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.81.2",
     "aos": "^2.3.4",
@@ -36,7 +39,7 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.6"
   },
