--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.81.2",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.7.3",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
