--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/vite": "^4.1.6",
-    "@tanstack/react-query": "^5.81.2",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
