--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-spinners": "^0.17.0",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "recharts": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
