--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.0.2",
     "sort-by": "^0.0.2",
     "sweetalert2": "^11.6.13",
-    "tailwindcss": "^4.1.6",
-    "recharts": "^3.0.2"
+    "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
