--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "match-sorter": "^8.0.3",
     "motion": "^12.12.2",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
